<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:bind="http://schemas.android.com/tools">

    <data class="WelcomeDataBinding">

        <import type="android.view.View"/>

        <import type="android.content.Intent"/>

        <variable name="bindingModel"
                  type="com.kalashnyk.denys.defaultproject.presentation.activities.welcome.flow.WelcomeFlowModelBinding"/>

        <variable name="navigator"
                  type="com.kalashnyk.denys.defaultproject.presentation.navigation.Navigation"/>

        <variable name="typeScreen"
                  type="com.kalashnyk.denys.defaultproject.presentation.navigation.fragment_navigator.model.Pages"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/soft_blue"
            android:fitsSystemWindows="true"
            tools:context=".presentation.activities.welcome.WelcomeActivity">

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline_splash_start"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/indentation_32"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline_splash_end"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/indentation_32"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline_splash_top"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/indentation_16"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline_splash_bottom"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/indentation_16"/>

        <TextView
                android:id="@+id/tvWelcomeHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="42dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/welcome_to_obscuralight"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_size_34"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline_splash_top" />

        <TextView
                android:id="@+id/tvWelcomeInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:fontFamily="sans-serif"
                android:text="@string/welcome_information"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/txt_size_16"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/tvWelcomeHeader"
                app:layout_constraintTop_toBottomOf="@+id/tvWelcomeHeader" />

        <TextView
                android:id="@+id/tvWelcomeSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="sans-serif-medium"
                android:onClick="@{(view)-> navigator.openAuthScreen(typeScreen.SIGN_IN, Intent.FLAG_ACTIVITY_CLEAR_TASK)}"
                android:padding="@dimen/indentation_5"
                android:textSize="@dimen/txt_size_18"
                app:layout_constraintStart_toStartOf="@+id/tvWelcomeInformation"
                app:layout_constraintTop_toBottomOf="@id/tvWelcomeInformation"
                bind:textSpan="@{bindingModel.signInTextSpanModel}"
                tools:text="@string/welcome_text_already_have_an_account" />

        <TextView
                android:id="@+id/tvWelcomeSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="94dp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="sans-serif-medium"
                android:onClick="@{(view)-> navigator.openAuthScreen(typeScreen.SIGN_UP, Intent.FLAG_ACTIVITY_CLEAR_TASK)}"
                android:padding="@dimen/indentation_6"
                android:textSize="@dimen/txt_size_18"
                app:layout_constraintStart_toStartOf="@+id/tvWelcomeSignIn"
                app:layout_constraintTop_toBottomOf="@+id/tvWelcomeSignIn"
                bind:textSpan="@{bindingModel.signUpTextSpanModel}"
                tools:text="@string/welcome_text_not_with_us_yet" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>