<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/soft_blue">


    <TextView
            android:id="@+id/tv_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_35"
            android:gravity="center_horizontal"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/txt_size_1"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_36"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/password_recovery"/>

    <LinearLayout
            android:id="@+id/sl_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indentation_16"
            android:layout_marginTop="@dimen/indentation_35"
            android:layout_marginEnd="@dimen/indentation_16"
            android:background="@drawable/common_back_auth_inputs"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_headline">

        <TextView
                android:id="@+id/tv_enter_the_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indentation_16"
                android:layout_marginTop="@dimen/indentation_16"
                android:layout_marginEnd="@dimen/indentation_16"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="1sp"
                android:textColor="@color/text_color_black"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="@id/sl_background"
                app:layout_constraintTop_toTopOf="@id/sl_background"
                tools:text="@string/enter_the_pass"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/til_recover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indentation_16"
                android:layout_marginEnd="@dimen/indentation_16"
                app:layout_constraintLeft_toLeftOf="@id/sl_background"
                app:layout_constraintTop_toBottomOf="@id/tv_enter_the_pass">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/iet_enter_your_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="8sp"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
            android:id="@+id/btn_get_the_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_params_36"
            android:layout_marginStart="@dimen/indentation_16"
            android:layout_marginTop="@dimen/indentation_10"
            android:layout_marginEnd="@dimen/indentation_16"
            android:background="@drawable/common_back_button"
            android:gravity="center"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="13sp"
            android:textColor="@color/text_color_blue"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sl_background"
            tools:text="@string/get_a_password"/>


</android.support.constraint.ConstraintLayout>